// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`cognito backend app client 1`] = `
Object {
  "Resources": Object {
    "CognitoAppClient6799695E": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "CallbackUrls": Array [],
        "Environment": "stage",
        "GenerateSecret": true,
        "LogoutUrls": Array [],
        "Name": "my-backend-service",
        "Scopes": Array [
          "https://api.vydev.io/read",
          "https://api.vydev.io/write",
        ],
        "ServiceToken": "serviceToken",
        "Type": "backend",
      },
      "Type": "Custom::VyCognitoAppClient",
      "UpdateReplacePolicy": "Delete",
    },
    "CognitoAppClientClientSecret0A69F29B": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "Description": "auth_url, client_id and client_secret for Vy Cognito app client my-backend-service",
        "Name": "/vy/stage/cognito/app-client/my-backend-service",
        "SecretString": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{\\"auth_url\\":\\"auth_url\\",\\"client_id\\":\\"",
              Object {
                "Fn::GetAtt": Array [
                  "CognitoAppClient6799695E",
                  "ClientId",
                ],
              },
              "\\",\\"client_secret\\":\\"",
              Object {
                "Fn::GetAtt": Array [
                  "CognitoAppClient6799695E",
                  "ClientSecret",
                ],
              },
              "\\"}",
            ],
          ],
        },
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Delete",
    },
  },
}
`;

exports[`cognito frontend app client 1`] = `
Object {
  "Resources": Object {
    "CognitoAppClient6799695E": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "CallbackUrls": Array [
          "https://my-app.vydev.io/auth/callback",
        ],
        "Environment": "test",
        "GenerateSecret": false,
        "LogoutUrls": Array [
          "https://my-app.vydev.io/logout",
        ],
        "Name": "my-web-app",
        "Scopes": Array [
          "email",
          "openid",
          "profile",
        ],
        "ServiceToken": "serviceToken",
        "Type": "frontend",
      },
      "Type": "Custom::VyCognitoAppClient",
      "UpdateReplacePolicy": "Delete",
    },
  },
}
`;

exports[`cognito frontend app client with custom secretName 1`] = `
Object {
  "Resources": Object {
    "CognitoAppClient6799695E": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "CallbackUrls": Array [],
        "Environment": "prod",
        "GenerateSecret": true,
        "LogoutUrls": Array [],
        "Name": "my-backend-service",
        "Scopes": Array [
          "https://api.vydev.io/read",
          "https://api.vydev.io/write",
        ],
        "ServiceToken": "serviceToken",
        "Type": "backend",
      },
      "Type": "Custom::VyCognitoAppClient",
      "UpdateReplacePolicy": "Delete",
    },
    "CognitoAppClientClientSecret0A69F29B": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "Description": "auth_url, client_id and client_secret for Vy Cognito app client my-backend-service",
        "Name": "my-secret",
        "SecretString": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{\\"auth_url\\":\\"auth_url\\",\\"client_id\\":\\"",
              Object {
                "Fn::GetAtt": Array [
                  "CognitoAppClient6799695E",
                  "ClientId",
                ],
              },
              "\\",\\"client_secret\\":\\"",
              Object {
                "Fn::GetAtt": Array [
                  "CognitoAppClient6799695E",
                  "ClientSecret",
                ],
              },
              "\\"}",
            ],
          ],
        },
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Delete",
    },
  },
}
`;
